增加登录页面及主页

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       #app {
       	height: 100%;
         width: 100%;
-        background-color: rgba(0,191,255, 0.2);
+        /* background-color: rgba(0,191,255, 0.2); */
       }
 
       .sk-fading-circle {
@@ -189,5 +189,5 @@
     <!-- built files will be auto injected -->
   </body>
 
-  <script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/echarts-en.common.min.js"></script>
+  <!-- <script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/echarts-en.common.min.js"></script> -->
 </html>
